Update docker-compose for local development

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,6 +17,8 @@ services:
     volumes:
       - ./:/symfony
     container_name: testtask-symfony-php-fpm
+    environment:
+      APP_ENV: dev
     depends_on:
       - postgres
 
