--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
 stages:
-  - print
+  - test
 
 hello_world:
-  stage: print
+  stage: test
   script:
-    - echo "Hello world from Gitlab pipeline!"
+    - echo "Starting test environment"
+    - docker-compose -f docker-compose.test.yml down
+    - docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit
