--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -17,6 +17,8 @@ services:
       APP_ENV: test
     depends_on:
       - postgres
+    command: >
+      bash -c "It will be starting test here"
 
   postgres:
     image: postgres:15-alpine
