--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,15 @@
 stages:
   - test
 
-hello_world:
+default:
+  before_script:
+    - echo "Starting test environment"
+    - docker-compose -f docker-compose.test.yml up --build -d
+  after_script:
+    - echo "Stopping test environment"
+    - docker-compose -f docker-compose.test.yml down
+
+test-job:
   stage: test
   script:
-    - echo "Starting test environment"
-    - docker-compose -f docker-compose.test.yml down
-    - docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit
+    - docker-compose -f docker-compose.test.yml exec -T php-fpm php -v
