--- a/composer.json
+++ b/composer.json
@@ -100,6 +100,7 @@
         }
     },
     "require-dev": {
+        "phpstan/phpstan": "^1.10",
         "squizlabs/php_codesniffer": "*",
         "symfony/debug-bundle": "6.3.*",
         "symfony/maker-bundle": "^1.0",
