--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,15 @@ stages:
   - test
 
 php-cs:
+  image: pavelkrauchuk/php-fpm-8.2-symfony
   stage: test
   script:
-    - docker-compose -f docker-compose.test.yml up --build -d
-    - docker-compose -f docker-compose.test.yml exec -T php-fpm composer install
-    - docker-compose -f docker-compose.test.yml exec -T php-fpm php ./vendor/bin/phpcs --report=junit --report-file=php_cs_results.xml ./src
+    - ls
+    # - docker run -d pavelkrauchuk/php-fpm-8.2-symfony -e "APP_ENV=test" --name php-fpm -v ./:/symfony
+    # - docker exec -T php-fmp composer install
+    # - docker-compose -f docker-compose.test.yml up --build -d
+    # - docker-compose -f docker-compose.test.yml exec -T php-fpm composer install
+    # - docker-compose -f docker-compose.test.yml exec -T php-fpm php ./vendor/bin/phpcs --report=junit --report-file=php_cs_results.xml ./src
   artifacts:
     reports:
       junit: php_cs_results.xml
